--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
- "proxy": "http://localhost:3001",
+ "proxy": "http://localhost:3000",
  "name": "efficient-life-systems",
  "version": "0.1.0",
  "private": true,
@@ -14,6 +14,7 @@
   "mongoose": "^5.11.15",
   "react": "^17.0.1",
   "react-dom": "^17.0.1",
+  "react-router-dom": "^5.2.0",
   "react-scripts": "4.0.2",
   "web-vitals": "^1.1.0"
  },
