--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "@testing-library/react": "^11.2.5",
   "@testing-library/user-event": "^12.6.3",
   "bcrypt": "^5.0.0",
+  "cookie-parser": "^1.4.5",
   "dotenv": "^8.2.0",
   "express": "^4.17.1",
   "jsonwebtoken": "^8.5.1",
